--- a/views/interestCalculator.hbs
+++ b/views/interestCalculator.hbs
@@ -1,49 +1,48 @@
 <script>
     function calculateInterest() {
-        var amount = document.getElementById("amount").value;
-        var interest_rate = document.getElementById("interest_rate").value;
-        var years = document.getElementById("years").value;
+        var amount = parseFloat(document.getElementById("amount").value) || 0;
+        var interest_rate = parseFloat(.getElementById("interest_rate").value) || 0;
+        var years = parseFloat(.getElementById("years").value) || 0;
+
         var simpleInterest = (amount*interest_rate/100) * years;
-        var total = eval(amount) + eval(simpleInterest);
-        document.getElementById("sampleinter").innerHTML = "Sample Interest = $" + simpleInterest;
-        document.getElementById("total").innerHTML = "Total bill amount = $" + total;
+        var total = amount + simpleInterest;
+
+        document.getElementById("sampleinter").innerHTML = "Sample Interest = $" + simpleInterest.toFixed(2);
+        document.getElementById("total").innerHTML = "Total bill amount = $" + total.toFixed(2);
     }
     function calculateMonthlyInterest() {
-        var totalAmount = document.getElementById("totalAmount").value;
-        var monthly_interest_rate = document.getElementById("monthly_interest_rate").value;
-        var months = document.getElementById("months").value;
-        var simpleMonthlyInterest = (totalAmount*monthly_interest_rate/100) * (months/12).toFixed(2);
-        var totalAfterMonths = eval(totalAmount) + eval(simpleMonthlyInterest);
-        document.getElementById("sampleintermonth").innerHTML = "Sample Interest = $" + simpleMonthlyInterest;
-        document.getElementById("totalmonth").innerHTML = "Total bill amount = $" + totalAfterMonths;
+        var totalAmount = parseFloat(document.getElementById("totalAmount").value) || 0;
+        var monthly_interest_rate = parseFloat(document.getElementById("monthly_interest_rate").value) || 0;
+        var months = parseFloat(document.getElementById("months").value) || 0;
+
+        var simpleMonthlyInterest = (totalAmount * monthly_interest_rate / 100) * (months/12).toFixed(2);
+        var totalAfterMonths = totalAmount + simpleMonthlyInterest;
+
+        document.getElementById("sampleintermonth").innerHTML = "Sample Interest = $" + simpleMonthlyInterest.toFixed(2);
+        document.getElementById("totalmonth").innerHTML = "Total bill amount = $" + totalAfterMonths.toFixed(2);
     }
     function calculateCompoundMonthlyInterest() {
-        var total_Amount = Number(document.getElementById("com_total_amount").value);
-        var monthlyInterestRate = Number(document.getElementById("com_monthly_interest_rate").value) * 1;
-        var payPeriod = Number(document.getElementById("pay_period").value);
-        var compoundMonths = Number(document.getElementById("com_months").value);
+        var total_Amount = parseFloat(document.getElementById("com_total_amount").value) || 0;
+        var monthlyInterestRate = parseFloat(document.getElementById("com_monthly_interest_rate").value) || 0;
+        var payPeriod = parseFloat(document.getElementById("pay_period").value) || 0;
+        var compoundMonths = parseFloat(document.getElementById("com_months").value) || 0;
 
-        console.log(total_Amount);
-        console.log(monthlyInterestRate);
-        console.log(compoundMonths);
-        console.log(payPeriod);
+        var rate = monthlyInterestRate / 100;
         var exponent = compoundMonths * payPeriod
-        {{!-- var compoundMonthlyInterest = (total_Amount + (1 + (monthlyInterestRate / compoundMonths) ** (compoundMonths * payPeriod))).toFixed(2); --}}
-        var compoundMonthlyInterest = (total_Amount + ((1 + (monthlyInterestRate / compoundMonths)) ** (exponent))).toFixed(2);
+        var compoundMonthlyInterest = total_Amount * Math.pow((1 + (rate / compoundMonths)), exponent);
         
-
-        console.log(compoundMonthlyInterest);
-
-        document.getElementById("totalCompoundMonth").innerHTML = "Total bill amount = $" + compoundMonthlyInterest;
+        document.getElementById("totalCompoundMonth").innerHTML = "Total bill amount = $" + compoundMonthlyInterest.toFixed(2);
     }
 </script>
+
+
 <div class="row justify-content-center text-center">
     <div class="interest-calc col-6">
 
         <h1>Yearly Simple Interest Calculator</h1>
-        <p>Bill Amount: $<input id="amount" type="number" min="1" max="1000000" onchange="calculateInterest()"></p>
-        <p>Interest Rate(Yearly): <input id="interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateInterest()">%</p>
-        <p>Years you will take to repay: <input id="years" type="number" min="1" max="72" value="1" onchange="calculateInterest()"></p>
+        <p>Bill Amount: $<input id="amount" type="number" min="1" max="1000000" oninput="calculateInterest()"></p>
+        <p>Interest Rate(Yearly): <input id="interest_rate" type="number" min="0" max="100" value="10" step=".1" oninput="calculateInterest()">%</p>
+        <p>Years you will take to repay: <input id="years" type="number" min="1" max="72" value="1" oninput="calculateInterest()"></p>
         <h2 id="sampleinter"></h2>
         <h2 id="total"></h2>
     </div>
@@ -52,9 +51,9 @@
     <div class="interest-calc col-6">
 
         <h1>Monthly Simple Interest Calculator</h1>
-        <p>Bill Amount: $<input id="totalAmount" type="number" min="1" max="1000000" onchange="calculateMonthlyInterest()"></p>
-        <p>Interest Rate(Monthly): <input id="monthly_interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateMonthlyInterest()">%</p>
-        <p>Months you will take to repay: <input id="months" type="number" min="1" max="72" value="1" onchange="calculateMonthlyInterest()"></p>
+        <p>Bill Amount: $<input id="totalAmount" type="number" min="1" max="1000000" oninput="calculateMonthlyInterest()"></p>
+        <p>Interest Rate(Monthly): <input id="monthly_interest_rate" type="number" min="0" max="100" value="10" step=".1" oninput="calculateMonthlyInterest()">%</p>
+        <p>Months you will take to repay: <input id="months" type="number" min="1" max="72" value="1" oninput="calculateMonthlyInterest()"></p>
         <h2 id="sampleintermonth"></h2>
         <h2 id="totalmonth"></h2>
     </div>
@@ -65,8 +64,9 @@
         <h1>Monthly Compound Interest Calculator</h1>
         <p>Bill Amount: $<input id="com_total_amount" type="number" min="1" max="1000000" onchange="calculateCompoundMonthlyInterest()"></p>
         <p>Interest Rate(Monthly): <input id="com_monthly_interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateCompoundMonthlyInterest()">%</p>
-        <p>Monnths you have to repay: <input id="pay_period" type="number" min="1" max="71" value="1" onchange="calculateCompoundMonthlyInterest()"></p>
+        <p>Months you have to repay: <input id="pay_period" type="number" min="1" max="71" value="1" onchange="calculateCompoundMonthlyInterest()"></p>
         <p>Number of times interest applied:  <input id="com_months" type="number" min="1" max="72" value="1" onchange="calculateCompoundMonthlyInterest()"></p>
         <h2 id="totalCompoundMonth"></h2>
     </div>
 </div>
+
