--- a/views/showBill.hbs
+++ b/views/showBill.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center ">
+{{!-- <div class="row justify-content-center ">
   <div class="col-4 login-up-form">
     <div class="lead justify-content-center">
       <a href="/bills/{{data._id}}">{{data.title}}</a>
@@ -36,5 +36,52 @@
       <input type="hidden" name="_method" value="delete">
       <button class="mb-3 btn btn-danger" type="submit">Delete Bill</button>
     </form>
+  </div>
+</div> --}}
+
+
+<div class="page-container">
+  <div class="form-box">
+      <div class="bill-info">
+          <h3><a href="/bills/{{data._id}}">{{data.title}}</a></h3>
+          <p><strong>Bill description:</strong> {{data.description}} </p>
+          <p><strong>${{data.amount}}</strong> is the amount left to be paid</p>
+          <p><strong>This bill must be paid by:</strong>{{data.due_date}}</p>
+      </div>
+
+      <h2>Update Bill Details</h2>
+      
+      <form action = "/bills/{{data._id}}?_method=put", method="post">
+          <div class="mb-3">
+              <label for="title" class="form-label">Name of the bill:</label>
+              <input type="text" class="form-control" name="title" id="title" value="{{data.title}}">
+          </div>
+
+          <div class="mb-3">
+              <label for="type" class="form-label">Bill Type:</label>
+              <input type="text" class="form-control" name="type" id="type" value="{{data.type}}">
+          </div>
+
+          <div class="mb-3">
+              <label for="description" class="form-label">What is this bill for?</label>
+              <input type="text" class="form-control" name="description" id="description" value="{{data.description}}">
+          </div>
+
+          <div class="mb-3">
+              <label for="amount" class="form-label">Bill Amount: $</label>
+              <input type="number" class="form-control" name="amount" id="amount" value="{{data.amount}}" step="0.01">
+          </div>
+
+          <div class="mb-4">
+              <label for="due_date" class="form-label">Full Payment Due Date:</label>
+              <input type="date" class="form-control" name="due_date" id="due_date" value="{{data.due_date}}">
+          </div>
+
+          <button type="submit" class="btn btn-form-primary">Update Bill</button>
+      </form>
+
+      <form action = "/bills/{{data._id}}?_method=DELETE" method = "post" class="mt-3">
+          <button type="submit" class="btn btn-danger w-100">Delete Bill</button>
+      </form>
   </div>
 </div>
