--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,6 @@
 <div class="page-container">
     <div class="form-box">
+        {{> flash-messages}}
         <h1>Welcome Back</h1>
         
         <form action="/login" method="post" id="loginform">
