--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,5 +1,6 @@
 <div class="page-container">
     <div class="form-box">
+        {{> flash-messages}}
         <h1>Create Your Account</h1>
         
         <form action="/signup" method="post" id="signupform">
