--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -1,42 +1,6 @@
-{{!-- <div class="row justify-content-center">
-    <div class="col-sm-4 login-up-form">
-        <form action="/create" method="post" id="billform">
-            <div class="mb-3 mt-3">
-                <label for="title" class="form-label">Name of the bill:</label>
-                <input type="text" class="form-control italic-placeholder" name="title" id="title" placeholder="'Best Buy Credit Card'">
-            </div>
-            <div class="mb-3">
-                <label for="type" class="form-label">Bill type:</label>
-                <select id="type" name="type">
-                    <option >Credit Card</option>
-                    <option >Personal Loan</option>
-                    <option >Student Loan</option>
-                    <option >Other</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Bill Desription: </label>
-                <input type="text" class="form-control italic-placeholder" name="description" id="description" placeholder="'Credit card bill from laptop purchase at best buy'">
-            </div>
-            <div class="mb-3">
-                <label for="amount" class="form-label">Bill Amount: $</label>
-                <input type="number" class="form-control italic-placeholder" name="amount" id="amount" placeholder="'1,200'">
-            </div>
-            <div class="mb-3">
-                <label for="dueDate" class="form-label">Full Payment Due Date</label>
-                <input type="date" class="form-control" name="dueDate" id="dueDate">
-                
-            </div>
-            <div class="mb-3 text-center">
-                <button type="submit" class="submitButton mt-3">Create bill</button>
-            </div>
-            
-        </form>
-    </div>
-</div> --}}
-
 
 <div class="page-container">
+     {{> flash-messages}}
     <div class="form-box">
         <h1>Add a New Bill</h1>
         
