--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -38,6 +38,9 @@
                         <a class="nav-link" href="/calculator">Use interest calculator</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/articles">Articles & More</a>
+                    </li>
+                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/logout">Log Out</a>
                     </li>
                     {{else}}
@@ -46,6 +49,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/login">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/articles">Articles & More</a>
                     </li>
                     {{/if}}
                 </ul>
